<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="edu.cs4730.basicardemo.MainActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <TextView
        android:id="@+id/xAxisLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="15dp"
        android:background="#7F000000"
        android:text="@string/xAxis" />

    <TextView
        android:id="@+id/yAxisLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/xAxisLabel"
        android:layout_alignLeft="@+id/xAxisLabel"
        android:background="#7F000000"
        android:text="@string/yAxis" />

    <TextView
        android:id="@+id/zAxisLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/yAxisLabel"
        android:layout_alignLeft="@+id/yAxisLabel"
        android:background="#7F000000"
        android:text="@string/zAxis" />

    <TextView
        android:id="@+id/headingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zAxisLabel"
        android:layout_alignLeft="@+id/zAxisLabel"
        android:layout_marginTop="19dp"
        android:background="#7F000000"
        android:text="@string/heading" />

    <TextView
        android:id="@+id/pitchLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headingLabel"
        android:layout_alignLeft="@+id/headingLabel"
        android:background="#7F000000"
        android:text="@string/pitch" />

    <TextView
        android:id="@+id/rollLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pitchLabel"
        android:layout_alignLeft="@+id/pitchLabel"
        android:background="#7F000000"
        android:text="@string/roll" />

    <TextView
        android:id="@+id/latitudeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rollLabel"
        android:layout_alignLeft="@+id/rollLabel"
        android:layout_marginTop="34dp"
        android:background="#7F000000"
        android:text="@string/latitude" />

    <TextView
        android:id="@+id/longitudeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/latitudeLabel"
        android:layout_alignLeft="@+id/latitudeLabel"
        android:background="#7F000000"
        android:text="@string/longitude" />

    <TextView
        android:id="@+id/altitudeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/longitudeLabel"
        android:layout_alignLeft="@+id/longitudeLabel"
        android:background="#7F000000"
        android:text="@string/altitude" />

    <TextView
        android:id="@+id/xAxisValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/xAxisLabel"
        android:layout_marginLeft="56dp"
        android:layout_toRightOf="@+id/longitudeLabel"
        android:background="#7F000000"
        android:text="@string/empty" />

    <TextView
        android:id="@+id/yAxisValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/yAxisLabel"
        android:layout_alignLeft="@+id/xAxisValue"
        android:layout_alignBottom="@+id/yAxisLabel"
        android:background="#7F000000"
        android:text="@string/empty" />

    <TextView
        android:id="@+id/zAxisValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/headingLabel"
        android:layout_alignLeft="@+id/yAxisValue"
        android:background="#7F000000"
        android:text="@string/empty" />

    <TextView
        android:id="@+id/headingValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/headingLabel"
        android:layout_alignLeft="@+id/zAxisValue"
        android:layout_alignBottom="@+id/headingLabel"
        android:background="#7F000000"
        android:text="@string/empty" />

    <TextView
        android:id="@+id/pitchValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pitchLabel"
        android:layout_alignLeft="@+id/headingValue"
        android:layout_alignBottom="@+id/pitchLabel"
        android:background="#7F000000"
        android:text="@string/empty" />

    <TextView
        android:id="@+id/rollValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/latitudeLabel"
        android:layout_alignLeft="@+id/pitchValue"
        android:background="#7F000000"
        android:text="@string/empty" />

    <TextView
        android:id="@+id/latitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rollValue"
        android:layout_alignBottom="@+id/latitudeLabel"
        android:background="#7F000000"
        android:text="@string/empty" />

    <TextView
        android:id="@+id/longitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/longitudeLabel"
        android:layout_alignLeft="@+id/latitudeValue"
        android:layout_alignBottom="@+id/longitudeLabel"
        android:background="#7F000000"
        android:text="@string/empty" />

    <TextView
        android:id="@+id/altitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/altitudeLabel"
        android:layout_alignLeft="@+id/longitudeValue"
        android:layout_alignBottom="@+id/altitudeLabel"
        android:background="#7F000000"
        android:text="@string/empty" />
</RelativeLayout>
